# collision_detector

./: README.md  convert_octree.py
pcd2bt/: CMakeLists.txt
pcd2bt/include/collision_detector/: collision_detector.hpp
pcd2bt/src/: main.cpp  pybind_collision_detector.cpp
pcd2bt/test/: test_box_box_collision.cpp  test_pybind_collision_detector.py
